<?xml version="1.0"?>
<package format="2">
  <name>vector_map</name>
  <version>0.0.0</version>
  <description>vector map pacakge</description>
  <maintainer email="tomoya.sato@tier4.jp">Tomoya-Sato</maintainer>
  <author>Tomoya-Sato</author>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>visualization_msgs</depend>

  <export>
  </export>
</package>
